fix collapse classes

--- a/src/scss/ui/collapse.scss
+++ b/src/scss/ui/collapse.scss
@@ -15,6 +15,10 @@
   grid-template-rows: 1fr;
 }
 
+.collapse--open-mt30 {
+  margin-top: 1.875rem;
+}
+
 .collapse-action {
   display: inline-block;
   background-color: transparent;
