--- a/src/scss/utils/global.scss
+++ b/src/scss/utils/global.scss
@@ -58,10 +58,6 @@ body {
   visibility: hidden;
 }
 
-.mt30 {
-  margin-top: 1.875rem;
-}
-
 .fade-left {
   position: fixed;
   right: 0;
